Alembic Pipeline: Replacing slightly different alembic files. #52579

Closed
opened 2017-08-29 12:16:38 +02:00 by Luciano Muñoz Sessarego · 10 comments

System Information
Window 10 - Asus Geforce GTX1060

Blender Version
Broken: (example: 2.79.1 b4b1397

Short description of error
When you replace an alembic file for an other that has the same mesh information but with different flags blender crashes... and alembic has a bunch of possible different flags like 2017-08-29 12_01_43-Alembic Export.png

Exact steps for others to reproduce the error
I open blender
import alembic s01_007.abc
make sure everything is working and playing.
select any mesh
in the mesh sequence modifier under filepath click the folder icon to replace it with s01_008.abc
crash.

Files are the same, made with the same maya, in different computers so flags are different, and this can be a big problem, maybe a way to only take into consideration what is in the new file compared to what was in the previous one would be important, or maybe a way to troubleshoot by having somewhere where yo see what data is being expected from the file would be nice.

S01_008.abc
S01_007.abc

**System Information** Window 10 - Asus Geforce GTX1060 **Blender Version** Broken: (example: 2.79.1 b4b1397 **Short description of error** When you replace an alembic file for an other that has the same mesh information but with different flags blender crashes... and alembic has a bunch of possible different flags like ![2017-08-29 12_01_43-Alembic Export.png](https://archive.blender.org/developer/F738354/2017-08-29_12_01_43-Alembic_Export.png) **Exact steps for others to reproduce the error** I open blender import alembic s01_007.abc make sure everything is working and playing. select any mesh in the mesh sequence modifier under filepath click the folder icon to replace it with s01_008.abc crash. Files are the same, made with the same maya, in different computers so flags are different, and this can be a big problem, maybe a way to only take into consideration what is in the new file compared to what was in the previous one would be important, or maybe a way to troubleshoot by having somewhere where yo see what data is being expected from the file would be nice. [S01_008.abc](https://archive.blender.org/developer/F738361/S01_008.abc) [S01_007.abc](https://archive.blender.org/developer/F738360/S01_007.abc)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @LucianoMunoz

Added subscriber: @LucianoMunoz
Sybren A. Stüvel was assigned by Dalai Felinto 2017-08-29 12:44:35 +02:00

This issue was referenced by 696f4dc85f

This issue was referenced by 696f4dc85f7faa8bc21e2e48302c6b680a5bb09e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

woot!

woot!

A document that describes which of those myriad of options work with Blender and which don't would be awesome. Unfortunately I can't make that myself, since I don't have Maya (and I don't even know whether it runs on Linux at all).

A document that describes which of those myriad of options work with Blender and which don't would be awesome. Unfortunately I can't make that myself, since I don't have Maya (and I don't even know whether it runs on Linux at all).
Author
Member

Well the screenshot in the bug report is all the options that are supported by Maya by default.
In the other hand Maya has an educational version that you can download and fully supports alembic, and also runs on windows, mac and Linux.
All the big studios run on Linux machines, so Maya is bound to be there. =)

Well the screenshot in the bug report is all the options that are supported by Maya by default. In the other hand Maya has an educational version that you can download and fully supports alembic, and also runs on windows, mac and Linux. All the big studios run on Linux machines, so Maya is bound to be there. =)
Author
Member

I can help if you need any testing, or abc file creation with different options and such!

I can help if you need any testing, or abc file creation with different options and such!

You could even write the document? ;-)

You could even write the document? ;-)
Author
Member

Yeah! I'll do that, just now with the moving to london, everything is on hold until i'm set up, but I've definitelly have been writing it in my head... =)

Yeah! I'll do that, just now with the moving to london, everything is on hold until i'm set up, but I've definitelly have been writing it in my head... =)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52579
No description provided.