source/blender/alembic/intern/abc_util.cc
@@ -370,10 +370,10 @@ AbcObjectReader *create_reader(const Alembic::AbcGeom::IObject &object, ImportSe
 		reader = new AbcCurveReader(object, settings);
 	}
 	else {
-		std::cerr << "Alembic: unknown how to handle objects of schema "
+		std::cerr << "Alembic: unknown how to handle objects of schema '"
 		          << md.get("schemaObjTitle")
-		          << ", skipping object "
-		          << object.getFullName() << std::endl;
+		          << "', skipping object '"
+		          << object.getFullName() << "'" << std::endl;
 	}
 
 	return reader;
